--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,12 @@
-html {
-    background-color: #EEF2EF;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
 }
-.container-fluid, .content, .react-multi-carousel-list {
-    background: #EEF2EF;
-    background-color: #EEF2EF !important;
-}
-.content{
-    padding: 60px !important;
-}
-.listen-spotify{
-    height: 40px;
-    background-color: white !important;
-}
-
 
 .kabobloader {
     margin: auto;
@@ -23,40 +17,4 @@ html {
     position:absolute;
     width: 70px;
     height:70px;
-  
-  }
-  
-  .kabobloader > div {
-    width: 18px;
-    height: 18px;
-    background-color: #2EBD59;
-    border-radius: 100%;
-    display: inline-block;
-    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  }
-  
-  .kabobloader .bounce1 {
-    -webkit-animation-delay: -0.32s;
-    animation-delay: -0.32s;
-  }
-  
-  .kabobloader .bounce2 {
-    -webkit-animation-delay: -0.16s;
-    animation-delay: -0.16s;
-  }
-  
-  @-webkit-keyframes sk-bouncedelay {
-    0%, 80%, 100% { -webkit-transform: scale(0) }
-    40% { -webkit-transform: scale(1.0) }
-  }
-  
-  @keyframes sk-bouncedelay {
-    0%, 80%, 100% { 
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    } 40% { 
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
-    }
   }
